<resources>
    <string name="app_name">McAlister</string>
    <string name="copyright">Jarzasa.com 2017</string>
    <string name="table_number">Número:</string>
    <string name="table_persons">Comensales:</string>
    <string name="add_text_title">AÑADIR / MODIFICAR MESA</string>
    <string name="erase_text_title">BORRAR MESA</string>
    <string name="table_list_title">MESAS</string>
    <string name="plates_list_title">CARTA DE PLATOS</string>
    <string name="add_plate_button">Platos</string>
    <string name="plate_number">13</string>
    <string name="plate_name">Ensalada mixta</string>
    <string name="ingredients_plate">Lechuga, tomate, cebolla y bonito.</string>
    <string name="allergens_plate">No tiene alérgenos</string>
    <string name="recipe_plate">Cortar en trozos pequeños la lechuga, el tomate y la cebolla. Mezcle todo y añada el bonito. Aliñar al gusto.</string>
    <string name="price_plate">7,25€</string>
    <string name="plate_table_title">PLATO</string>
    <string name="plate_ingredients_title">INGREDIENTES</string>
    <string name="plate_allergens_title">ALERGENOS</string>
    <string name="plate_recipe_title">RECETA</string>
    <string name="plate_price_title">PRECIO</string>
    <string name="plate_return_button">VOLVER</string>
    <string name="price_format">%.2f €</string>
    <string name="show_plate">Ver plato</string>
    <string name="select_plate">Seleccionar plato</string>
    <string name="image_of_icon">Imagen del icono</string>
    <string name="table">MESA:</string>
    <string name="textview">TextView</string>
    <string name="plate_photo">plate_photo</string>
    <string name="number">Numero</string>
    <string name="previous">Anterior</string>
    <string name="next">Siguiente</string>
    <string name="title_activity_actualize_table">ActualizeTableActivity</string>
    <string name="see">VER</string>
    <string name="plate_name_text">Nombre del plato</string>
    <string name="add">AÑADIR</string>
    <string name="table_cell">Mesa:</string>
    <string name="quantity_text">Cantidad:</string>
    <string name="quantity_edit">Cantidad</string>
    <string name="notes_text">Notas:</string>
    <string name="notes">Notas</string>
    <string name="table_name">MESA  </string>
    <string name="table_title">MESA</string>
    <string name="text_progress">Cargando carta de platos</string>
    <string name="plate_text">Plato</string>
    <string name="tables_list">MESAS</string>
    <string name="plus">+</string>
    <string name="default_text">Default</string>
    <string name="quantity">Cantidad:</string>
    <string name="price">Precio:</string>
    <string name="table_added">Mesa almacenada</string>
    <string name="discarded_changes">Cambios descartados</string>

</resources>
