<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="@dimen/recycler_card_elevation"
    app:cardCornerRadius="@dimen/recycler_card_radius"
    android:layout_margin="@dimen/normal_margin">

    <android.support.constraint.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:textAlignment="center">

        <TextView
            android:id="@+id/plate_name"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/normal_margin"
            android:layout_marginEnd="@dimen/normal_margin"
            android:layout_marginStart="@dimen/normal_margin"
            android:layout_marginTop="@dimen/normal_margin"
            android:layout_weight="4"
            android:gravity="start|center_vertical"
            android:text="@string/plate_name_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/view_plate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <Button
            android:id="@+id/view_plate"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small_margin"
            android:layout_marginEnd="@dimen/normal_margin"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_weight="1"
            android:background="#52BE7F"
            android:text="@string/see"
            android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
            android:textSize="@dimen/medium_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/select_plate"
            app:layout_constraintTop_toTopOf="parent"/>

        <Button
            android:id="@+id/select_plate"
            android:layout_width="56dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/normal_margin"
            android:layout_marginEnd="@dimen/normal_margin"
            android:layout_marginTop="@dimen/normal_margin"
            android:layout_weight="1"
            android:background="#52BE7F"
            android:text="@string/plus"
            android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>