<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E8F6EE"
    tools:context="com.jarzasa.mcalister.activity.NotesTableActivity">

    <TextView
        android:id="@+id/plate_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/plate_text"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/quantity_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/quantity_text"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/plate_name"
        app:layout_constraintTop_toBottomOf="@+id/plate_name"/>

    <EditText
        android:id="@+id/quantity_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="#FFFFFF"
        android:inputType="text"
        android:singleLine="false"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/quantity_text"
        app:layout_constraintEnd_toEndOf="@+id/plate_name"
        app:layout_constraintStart_toEndOf="@+id/quantity_text"
        app:layout_constraintTop_toTopOf="@+id/quantity_text"/>

    <TextView
        android:id="@+id/notes_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/notes_text"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/quantity_text"
        app:layout_constraintTop_toBottomOf="@+id/quantity_edit"/>

    <EditText
        android:id="@+id/notes_edit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:background="#FFFFFF"
        android:inputType="text"
        android:singleLine="false"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/quantity_edit"
        app:layout_constraintStart_toStartOf="@+id/notes_text"
        app:layout_constraintTop_toBottomOf="@+id/notes_text"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="368dp"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/ok_notes_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:background="#52BE7F"
            android:text="@android:string/ok"
            tools:ignore="ButtonStyle"/>

        <Button
            android:id="@+id/cancel_notes_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_weight="1"
            android:background="#52BE7F"
            android:text="@android:string/cancel"
            tools:ignore="ButtonStyle"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
