<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E8F6EE"
    tools:context="com.jarzasa.mcalister.activity.AddTableActivity">

    <Button
        android:id="@+id/cancel_add_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/big_margin"
        android:layout_marginEnd="@dimen/normal_margin"
        android:layout_marginStart="@dimen/big_margin"
        android:background="#52BE7F"
        android:text="@android:string/cancel"
        android:textColor="#E8F6EE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ok_add_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/ok_add_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/big_margin"
        android:layout_marginEnd="@dimen/big_margin"
        android:layout_marginStart="@dimen/normal_margin"
        android:background="#52BE7F"
        android:text="@android:string/ok"
        android:textColor="#E8F6EE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cancel_add_button"/>

    <TextView
        android:id="@+id/table_number_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="100dp"
        android:text="@string/table_number"
        android:textSize="@dimen/medium_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/table_number_entrance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="50dp"
        android:background="#ffffff"
        android:inputType="text"
        android:singleLine="false"
        android:textAlignment="textEnd"
        android:textSize="@dimen/medium_text"
        app:layout_constraintBottom_toBottomOf="@+id/table_number_delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/table_number_delete"
        app:layout_constraintTop_toTopOf="@+id/table_number_delete"
        tools:text="número"/>

    <TextView
        android:id="@+id/table_persons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/table_persons"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/table_number_delete"
        app:layout_constraintTop_toBottomOf="@+id/table_number_delete"/>

    <EditText
        android:id="@+id/table_persons_entrance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="50dp"
        android:background="#ffffff"
        android:inputType="text"
        android:textAlignment="textEnd"
        android:textSize="@dimen/medium_text"
        app:layout_constraintBottom_toBottomOf="@+id/table_persons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/table_number_delete"
        app:layout_constraintTop_toTopOf="@+id/table_persons"
        tools:text="comensales"/>

    <TextView
        android:id="@+id/add_text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/normal_margin"
        android:layout_marginStart="@dimen/normal_margin"
        android:layout_marginTop="32dp"
        android:text="@string/add_text_title"
        android:textAlignment="center"
        android:textSize="@dimen/extra_big_text"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

</android.support.constraint.ConstraintLayout>
